feat: Implement Progress Tracker and Theme Manager modules
- Added Progress Tracker module for managing progress updates in GUI operations.
- Introduced Theme Manager module to handle GUI themes and appearance settings.
- Created utility modules for error handling, file scanning, and path validation.
- Refactored XML Data Reader to utilize new modular architecture for better maintainability.
- Added batch and shell scripts for launching the advanced GUI application.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 *.xlsx
 test_*.py
 *_example.py
+*.zip
+/docs/
+/__pycache__/
+modules/__pycache__/
+modules/*.pyc
+modules/utils/__pycache__/
+modules/core/__pycache__/
+modules/gui/__pycache__/
