--- a/cosmed-data-converter-web/.streamlit/config.toml
+++ b/cosmed-data-converter-web/.streamlit/config.toml
@@ -1,16 +1,26 @@
-[settings]
-app_name = "COSMED Data Converter Web Version"
-version = "0.1.0"
-
 [server]
 maxUploadSize = 200
 maxMessageSize = 200
 
 [theme]
-primaryColor = "#1f77b4"
-backgroundColor = "#ffffff"
-secondaryBackgroundColor = "#f0f2f6"
-textColor = "#262730"
+base = "dark"
+primaryColor = "#3b82f6"
+backgroundColor = "#0f172a"
+secondaryBackgroundColor = "#1e293b"
+textColor = "#f8fafc"
+linkColor = "#60a5fa"
+linkUnderline = true
+borderColor = "#475569"
+baseRadius = "0.5rem"
+buttonRadius = "0.5rem"
+showWidgetBorder = true
+
+[theme.sidebar]
+backgroundColor = "#1e293b"
+secondaryBackgroundColor = "#334155"
+textColor = "#f8fafc"
+primaryColor = "#60a5fa"
+borderColor = "#475569"
 
 [browser]
 gatherUsageStats = false
